bug: remove css style causing overflow

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -18,10 +18,6 @@ a:active {
   color: inherit;
 }
 
-.carousel-caption {
-    margin-bottom: -1.5rem;
-}
-
 #contact-info address {
     font-weight: 400;
     font-size: 13px;
